<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:padding="8dp">
            <LinearLayout
                android:id="@+id/btnCourses"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/home_background_gradient"
                    android:padding="26dp"
                    android:src="@drawable/ic_chapters_blue" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/nav_courses"
                    android:fontFamily="serif"
                    android:textColor="@color/colorGrey"
                    android:textSize="16dp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/btnTests"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/home_background_gradient"
                    android:padding="26dp"
                    android:src="@drawable/ic_tests_nav" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/nav_tests"
                    android:fontFamily="serif"
                    android:textColor="@color/colorGrey"
                    android:textSize="16sp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/btnPracticeTest"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/home_background_gradient"
                    android:padding="26dp"
                    android:src="@drawable/ic_tests_nav" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="serif"

                    android:text="@string/nav_practice_test"
                    android:textColor="@color/colorGrey"
                    android:textSize="16dp"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:orientation="horizontal"
            android:padding="8dp">

            <LinearLayout
                android:id="@+id/btnNotes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/home_background_gradient"
                    android:padding="26dp"
                    android:src="@drawable/ic_notes_nav" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="serif"
                    android:text="@string/nav_notes"
                    android:textColor="@color/colorGrey"
                    android:textSize="16dp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/btnLegalMaxim"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/home_background_gradient"
                    android:padding="26dp"
                    android:src="@drawable/ic_bookmark_clue" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="serif"
                    android:text="@string/nav_bookmarks"
                    android:textColor="@color/colorGrey"
                    android:textSize="16dp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnSCLJ"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/home_background_gradient"
                    android:padding="26dp"
                    android:src="@drawable/ic_profile_nav" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="serif"
                    android:text="@string/nav_profile"
                    android:textColor="@color/colorGrey"
                    android:textSize="16dp"/>
            </LinearLayout>


        </LinearLayout>


    </LinearLayout>
</ScrollView>